metodo post api local

--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
 		</section>
 		<section class="maravilhosas container" id="mulheres-maravilhosas-cadastro">
 			<h2>Cadastro maravilhoso!</h2>
-			<form action="/action_page.php">
+			<form action="javascript:cadastrarPerfil()">
 				Nome:<br>
 				<input type="text" name="nome" value="">
 				<br>
 
-				Endereço da imagem':<br>
+				Endereço da imagem:<br>
 				<input type="text" name="imagem" value="">
 				<br>
 
 				<br><br>
-				<input type="submit" value="Submit">
+				<input type="submit" value="Submit" id="submit">
 			</form>
 		</section>
 	</main>
-	<footer class="rodape">
+	<footer class=" rodape">
 		<div class="rodape__principal">
 			<ul class="rodape__navegacao">
 				<li>
