reload na pagina

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 				<input type="text" name="nome" value="">
 				<br>
 
-				Endereço da imagem:<br>
+				Endereço da imagem
+				:<br>
 				<input type="text" name="imagem" value="">
 				<br>
 
