terminar em casa

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 			<div class="maravilhosas__box">
 			</div>
 		</section>
+		<section class="maravilhosas container" id="mulheres-maravilhosas-delete">
+			</div>
+		</section>
 		<section class="maravilhosas container" id="mulheres-maravilhosas-cadastro">
 			<h2>Cadastro maravilhoso!</h2>
 			<form action="javascript:cadastrarPerfil()">
